# aura-trace

./: .gitignore  MASTER_PLAN.md  PROGRESS.md  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: drawing.rs  mod.rs  persistence.rs  window.rs
src-tauri/src/shortcuts/: global_keys.rs  mod.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/components/Canvas/: AuraCanvas.tsx  index.ts
src/components/Overlay/: index.ts
src/components/Toolbar/: ColorPicker.tsx  MiniToolbar.tsx  ModeIndicator.tsx  ToolButton.tsx  index.ts  toolbar.css
src/components/Tools/: Fibonacci.tsx  Marker.tsx  Polyline.tsx  TrendLine.tsx  ZoneRect.tsx  index.ts
src/constants/: index.ts
src/hooks/: index.ts  useAutoSave.ts  useDrawing.ts  useTauriEvents.ts  useWindowSize.ts
src/math/: fibonacci.ts  geometry.ts  index.ts  pixelAlign.ts
src/serialization/: index.ts
src/store/: index.ts  useCanvasStore.ts  useToolStore.ts  useUIStore.ts
src/types/: canvas.ts  index.ts
