[package]
name = "aura-trace"
version = "1.0.0"
description = "Professional Trading Overlay — Aura Trace"
authors = ["Aura Trace Team"]
edition = "2021"

[lib]
name = "aura_trace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"         # Optimizar por tamaño de binario
strip = true            # Eliminar símbolos de debug

